update open x, droid

--- a/index.html
+++ b/index.html
@@ -87,22 +87,46 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/error_recovery_visualization.gif" alt="critical" width="160" height="160">
+              <img src="images/droid_teaser_animated.gif" alt="critical" width="200" height="160">
             </td>
             <td width="75%" valign="middle">
-              <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
-              <papertitle>Done is Better than Perfect : Learning Complex Manipulation with Error Recovery</papertitle>
-              <!--</a>-->
+              <a href="https://droid-dataset.github.io/">
+              <papertitle>DROID: A Large-Scale In-the-Wild
+                Robot Manipulation Dataset</papertitle>
+              </a>
               <br>
-              <a href="https://minoring.github.io//">Minho Heo*</a>, <strong><a href="https://rureadyo.github.io/">Sungjae Park*</a></strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
+              DROID Dataset Team
               <br>
-              <em>In Progress</em>
+              arXiv 2024
+              <br>
+              <a href="https://arxiv.org/abs/2403.12945">Paper</a> / <a href="https://droid-dataset.github.io/">Website</a> / <a href="https://github.com/droid-dataset/droid">Code</a>
               <br>
               <!-- <p>When humans are given with a complex manipulation task, such as putting a thread in a needle, they often fail in single shot. However, they can iteratively recover from the failure state and retry, completing the task in the end.
                 We model such process as hierarchical reinforcement learning, where the high level policy determines whether to use task policy or call recovery. This improves suboptimal policy's success rate up to twice. </p>
               </p> -->
-              <p>We model <strong>"iterative recovery and retry"</strong> process in complex manipulation as hierarchical reinforcement learning, where the high level policy determines whether to use task policy or call recovery. This improves suboptimal policy's success rate up to 30%. </p>
-              </p>
+
+
+              <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/teaser_compressed.gif" alt="critical" width="200" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://robotics-transformer-x.github.io/">
+              <papertitle>Open X-Embodiment: Robotic Learning Datasets and RT-X Models</papertitle>
+              </a>
+              <br>
+              Open X-Embodiment Collaboration
+              <br>
+              ICRA 2024 
+              <br>
+              <a href="https://arxiv.org/abs/2310.08864">Paper</a> / <a href="https://robotics-transformer-x.github.io/">Website</a>
+              <br>
+              <!-- <p>When humans are given with a complex manipulation task, such as putting a thread in a needle, they often fail in single shot. However, they can iteratively recover from the failure state and retry, completing the task in the end.
+                We model such process as hierarchical reinforcement learning, where the high level policy determines whether to use task policy or call recovery. This improves suboptimal policy's success rate up to twice. </p>
+              </p> -->
 
 
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
