--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </p>-->
                   <p style="text-align:center">
                     <a href="mailto:sungj1026@gmail.com">Email</a> &nbsp/&nbsp
-                    <a href="data/SungjaePark_cv_20240319.pdf">CV</a> &nbsp/&nbsp
+                    <a href="data/SungjaePark_cv_20240620.pdf">CV</a> &nbsp/&nbsp
                     <!--  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                     <!--  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp -->
                     <a href="https://twitter.com/sungj1026">Twitter</a> &nbsp/&nbsp
@@ -147,7 +147,7 @@
                   <br>
                   Open X-Embodiment Collaboration
                   <br>
-                  ICRA 2024 (Best Conference Paper Award)
+                  ICRA 2024 / <strong style="color:red">Best Conference Paper Award</strong>
                   <br>
                   <a href="https://arxiv.org/abs/2310.08864">Paper</a> / <a
                     href="https://robotics-transformer-x.github.io/">Website</a>
@@ -172,9 +172,8 @@
                   <strong>Sungjae Park</strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>, <a
                     href="https://sites.google.com/robotics.snu.ac.kr/fcp/">Frank C. Park</a>
                   <br>
-                  <em>Bachelor's Thesis, 2022</em>
-                  <br>
-                  Awarded <strong>Outstanding BS Thesis Presentation Award</strong>
+                  Bachelor's Thesis / <strong style="color: red;">Outstanding BS Thesis Presentation Award</strong>
+
 
                   <p>We learn object centric trajectory planner from different robot's demonstration for
                     cross-embodiment transfer. </p>
