--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
                     <name>Sungjae Park</name>
                   </p>
                   <p>
-                    Hi, I am a research intern in the Visual Computing Lab at Seoul National University, advised by <a
-                      href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>.
+                    Hi, I am a M.S. in Robotics student at Carnegie Mellon University, advised by Prof. <a
+                    href="https://shubhtuls.github.io/">Shubham Tulsiani</a>.
                   </p>
                   <p>
-                    Previously, I was a research intern in the <a href="https://www.clvrai.com/">CLVR lab</a> at KAIST,
+                    Previously, I was a research intern in the Visual Computing lab at Seoul National University, advised by 
+                    <a href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>. I also spent time in                     
+                    <a href="https://www.clvrai.com/">CLVR lab</a> at KAIST,
                     advised by <a href="https://clvrai.com/web_lim/">Prof. Joseph J. Lim</a>.
                     I completed B.S. (Summa Cum Laude) in Mechanical Engineering and Mathematics at Seoul National
                     University.
