--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
-                  <a href="images/me.png"><img style="width:75%;max-width:75%" alt="profile photo"
-                      src="images/me.png" class="hoverZoomLink"></a>
+                  <a href="images/sungjae_circle.png"><img style="width:75%;max-width:75%" alt="profile photo"
+                      src="images/sungjae_circle.png" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
@@ -125,7 +125,7 @@
                   <br>
                   CoRL X-Embodiment Workshop 2024
                   <br>
-                  <a href="data/_ICRA25__From_Mocap_to_Robot_Hand_FINAL.pdf">Paper</a> / <a
+                  <a href="data/ICRA25__From_Mocap_to_Robot_Hand_FINAL.pdf">Paper</a> / <a
                     href="https://rureadyo.github.io/MocapRobot/">Website</a> 
                     <!-- <a href="https://github.com/droid-dataset/droid">Code</a> -->
                   <br>
