--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                   <p style="text-align:center">
                     <a href="mailto:sungjae2@andrew.cmu.edu">Email</a> &nbsp/&nbsp
                     <a href="data/SungjaePark_cv_20250102.pdf">CV</a> &nbsp/&nbsp
+                    <a href="https://scholar.google.com/citations?user=QVIAFJkAAAAJ&hl=en">Scholar</a> &nbsp/&nbsp
+
                     <!--  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                     <!--  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp -->
                     <a href="https://twitter.com/sungj1026">Twitter</a> &nbsp/&nbsp
