--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
-                  <a href="images/sungjae_circle.png"><img style="width:75%;max-width:75%" alt="profile photo"
-                      src="images/sungjae_circle.png" class="hoverZoomLink"></a>
+                  <a href="images/profile.jpg"><img style="width:75%;max-width:75%" alt="profile photo"
+                      src="images/profile.jpg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
