--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
                   </p>
                   <p>
                     Previously, I was a research intern in the Visual Computing lab at Seoul National University, advised by 
-                    <a href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>. I also spent time in                     
-                    <a href="https://www.clvrai.com/">CLVR lab</a> at KAIST,
-                    advised by <a href="https://clvrai.com/web_lim/">Prof. Joseph J. Lim</a>.
-                    I completed B.S. (Summa Cum Laude) in Mechanical Engineering and Mathematics at Seoul National
+                    <a href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>. I completed B.S. (Summa Cum Laude) in Mechanical Engineering and Mathematics at Seoul National
                     University.
                   </p>
 
