--- a/index.html
+++ b/index.html
@@ -113,6 +113,26 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/demodiffusion.gif" alt="critical" width="240" height="160">
+                </td>
+                <td width="75%" valign="middle">
+                  <a href="https://demodiffusion.github.io/">
+                    <papertitle>DemoDiffusion: One-Shot Human Imitation using pre-trained Diffusion Policy</papertitle>
+                  </a>
+                  <br>
+                  <strong>Sungjae Park</strong>, Homanga Bharadhwaj, Shubham Tulsiani.
+                  <br>
+                  Preprint 2025
+                  <br>
+                  <a href="https://arxiv.org/pdf/2506.20668">Paper</a> / <a
+                    href="https://demodiffusion.github.io/">Website</a> /
+                    <a href="https://github.com/demodiffusion/demodiffusion">Code</a>
+                  <br>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src="images/mocaprobot.png" alt="critical" width="200" height="160">
                 </td>
                 <td width="75%" valign="middle">
@@ -138,7 +158,7 @@
               </tr>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/droid_teaser_animated.gif" alt="critical" width="200" height="160">
+                  <img src="images/droid_teaser_animated.gif" alt="critical" width="240" height="160">
                 </td>
                 <td width="75%" valign="middle">
                   <a href="https://droid-dataset.github.io/">
@@ -164,7 +184,7 @@
               </tr>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/teaser_compressed.gif" alt="critical" width="200" height="160">
+                  <img src="images/teaser_compressed.gif" alt="critical" width="240" height="160">
                 </td>
                 <td width="75%" valign="middle">
                   <a href="https://robotics-transformer-x.github.io/">
@@ -186,90 +206,8 @@
                   <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
                 </td>
               </tr>
-              <!-- <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="images/ocp_example.png" alt="critical" width="200" height="160">
                 </td>
-                <td width="75%" valign="middle">
-                  <a href="data/Thesis__Object_Centric_Planning_for_Cross_Embodiment_Learning.pdf">
-                    <papertitle>Efficient Cross-Embodiment Learning with Object-Centric Planner</papertitle>
-                  </a>
-                  <br>
-                  <strong>Sungjae Park</strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>, <a
-                    href="https://sites.google.com/robotics.snu.ac.kr/fcp/">Frank C. Park</a>
-                  <br>
-                  Bachelor's Thesis / <strong style="color: red;">Outstanding BS Thesis Presentation Award</strong>
-
-
-                  <p>We learn object centric trajectory planner from different robot's demonstration for
-                    cross-embodiment transfer. </p>
-                  <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
-                </td>
-              </tr> -->
-              <table
-                style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                <tbody>
-                  <tr>
-                    <td style="padding:20px;width:100%;vertical-align:middle">
-                      <heading>Projects</heading>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <table
-                style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                <tbody>
-                  <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
-                      <img src="images/pgm_example.png" alt="pgm" width="160" height="160">
-                    </td>
-                    <td width="75%" valign="middle">
-                      <a href="data/PGM(Sungjae Park).pdf">
-                        <papertitle>Online Active Gaussian Process Motion Planning in Unknown Environments</papertitle>
-                      </a>
-                      <br>
-                      <strong>Sungjae Park*</strong>, <a href="http://stumm.ca/">Hyelim Choi*</a>, <a
-                        href="http://cosmo.nyu.edu/hogg/">Taekyun Kim*</a>
-                      <br>
-                      <em>Graduate Course Project (Probabilistic Graphical Models, Spring 2022)</em>
-                      <br>
-                      <p>We combine gaussian process motion planning with entropy-based information factor to perform
-                        online active motion planning in unknown environments.</p>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
-                      <img src="images/contrained_motion_planning_final.gif" alt="pgm" width="160" height="100">
-                    </td>
-                    <td width="75%" valign="middle">
-                      <papertitle>Motion Planning under Constraint with Learned Reachable Manifold</papertitle>
-                      <br>
-                      <strong>Sungjae Park</strong>, Suhan Park
-                      <p>
-                        We learn reachable manifold of franka panda robot arm with block neural autoregressive flow as
-                        in
-                        <a href="https://ieeexplore.ieee.org/document/9561589" <papertitile> Kim et al.</papertitile>
-                        </a>
-                        , and perform contrained motion planning directly in the learned latent space.
-                      </p>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
-                      <img src="images/peg_insertion.gif" alt="pgm" width="160" height="160">
-                    </td>
-                    <td width="75%" valign="middle">
-                      <papertitle>Vision Guided Peg Insertion</papertitle>
-                      <br>
-                      <strong>Sungjae Park*</strong>, Hosun Choi*, Hyunmoo Heo*
-                      <p>We perform robust peg insertion with YOLO-v3 based hole/box detection model.</p>
-                    </td>
-                  </tr>
-                  <!-- TODO: Add previous projects -->
-
-
-                </tbody>
-              </table>
+              </tr> 
 
 
               <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
