--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </p>-->
                   <p style="text-align:center">
                     <a href="mailto:sungjae2@andrew.cmu.edu">Email</a> &nbsp/&nbsp
-                    <a href="data/SungjaePark_cv_20250310.pdf">CV</a> &nbsp/&nbsp
+                    <a href="data/CV__Sungjae_Park_.pdf">CV</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=QVIAFJkAAAAJ&hl=en">Scholar</a> &nbsp/&nbsp
 
                     <!--  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
@@ -74,30 +74,15 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Research</heading>
-                  <p>
-                    My research goal is to develop a robot with human-like abilities, including
-                    <strong>physical capabilities</strong> for manipulation tasks, and <strong>cognitive
-                      capabilities</strong> for intuitive understanding of the real world.
-                  </p>
-                  <p>
-                    Specifically, I am interested in solving <strong>complex manipulation tasks</strong> (e.g.
-                    dexterous, contact-rich, long-horizon tasks),
-                    <br>
-                    <strong>physical reasoning WITH interaction</strong> (e.g. experimenting with objects and inferring
-                    properties with physical interaction), and
-                    <br>
-                    <strong>
-                      physical reasoning FOR interaction</strong>(e.g. intuitive physics, leveraging object permanence
-                    for efficient object retrieval).
-                  </p>
-                  <p>
-                    * denotes equal contribution.
-                  </p>
-
-
-                </td>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Research</heading>
+              <p>
+                My research goal is to enable robots to perform <strong>complex manipulation tasks</strong>: those involving long-horizon planning, contact-rich interactions, and high-precision dexterous control. 
+              </p>
+              <p>
+                * denotes equal contribution.
+              </p>
+            </td>
               </tr>
             </tbody>
           </table>
@@ -111,6 +96,25 @@
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/tsr_teaser.gif" alt="tsr" width="240" height="160">
+                </td>
+                <td width="75%" valign="middle">
+                  <a href="">
+                    <papertitle>Temporal Score Rescaling for Temperature Sampling in Diffusion and Flow Models</papertitle>
+                  </a>
+                  <br>
+                  Yanbo Xu*, Yu Wu*, <strong>Sungjae Park</strong>, Zhizhuo Zhou, Shubham Tulsiani.
+                  <br>
+                  Preprint 2025
+                  <br>
+                  <a href="https://arxiv.org/abs/2510.01184">Paper</a> /
+                  <a href="https://temporalscorerescaling.github.io/">Project Page</a> /
+                  <a href="https://github.com/temporalscorerescaling/TSR">Code</a>
+                  <br>
+                </td>
+              </tr>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src="images/demodiffusion.gif" alt="critical" width="240" height="160">
@@ -269,7 +273,7 @@
                         <td style="padding:20px;width:100%;vertical-align:middle">
                           <heading>Service</heading>
                           <p>
-                            Reviewer for NeurIPS, ICLR, ICRA.
+                            Reviewer for NeurIPS, ICLR, ICRA, RA-L, CoRL.
                           </p>
 
 
@@ -310,11 +314,11 @@
                   <tr>
                     <td style="padding:0px">
                       <br>
-                      <p style="text-align:right;font-size:small;">
-
+                      <p style="text-align:center">
                         <br>
                         Website template from <a href="https://jonbarron.info/">Jon Barron</a>.
                       </p>
+
                     </td>
                   </tr>
                 </tbody>
