--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   Preprint 2025
                   <br>
                   <a href="https://arxiv.org/abs/2510.01184">Paper</a> /
-                  <a href="https://temporalscorerescaling.github.io/">Project Page</a> /
+                  <a href="https://temporalscorerescaling.github.io/">Website</a> /
                   <a href="https://github.com/temporalscorerescaling/TSR">Code</a>
                   <br>
                 </td>
