--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <br>
                   Yanbo Xu*, Yu Wu*, <strong>Sungjae Park</strong>, Zhizhuo Zhou, Shubham Tulsiani.
                   <br>
-                  Preprint 2025
+                  Preprint, 2025
                   <br>
                   <a href="https://arxiv.org/abs/2510.01184">Paper</a> /
                   <a href="https://temporalscorerescaling.github.io/">Website</a> /
@@ -126,7 +126,7 @@
                   <br>
                   <strong>Sungjae Park</strong>, Homanga Bharadhwaj, Shubham Tulsiani.
                   <br>
-                  Preprint 2025
+                  <em>ICRA, 2026</em>
                   <br>
                   <a href="https://arxiv.org/pdf/2506.20668">Paper</a> / <a
                     href="https://demodiffusion.github.io/">Website</a> /
@@ -146,7 +146,7 @@
                   <br>
                   <strong>Sungjae Park*</strong>, Seungho Lee*, Mingi Choi*, Jiye Lee, Jeonghwan Kim, Jisoo Kim, Hanbyul Joo.
                   <br>
-                  CoRL X-Embodiment Workshop 2024
+                  <em>CoRL X-Embodiment Workshop, 2024</em>
                   <br>
                   <a href="https://arxiv.org/abs/2501.04169">Paper</a> / <a
                     href="https://rureadyo.github.io/MocapRobot/">Website</a> 
@@ -172,7 +172,7 @@
                   <br>
                   DROID Dataset Team
                   <br>
-                  RSS 2024
+                  <em>RSS, 2024</em>
                   <br>
                   <a href="https://arxiv.org/abs/2403.12945">Paper</a> / <a
                     href="https://droid-dataset.github.io/">Website</a> / <a
@@ -197,7 +197,7 @@
                   <br>
                   Open X-Embodiment Collaboration
                   <br>
-                  ICRA 2024 / <strong style="color:red">Best Conference Paper Award</strong>
+                  <em>ICRA, 2024  <strong style="color:red">(Best Conference Paper Award)</strong></em> 
                   <br>
                   <a href="https://arxiv.org/abs/2310.08864">Paper</a> / <a
                     href="https://robotics-transformer-x.github.io/">Website</a>
